fixed continue button on sub settings page

--- a/snapchap/www/app/components/confirmPassword/confirmPassword.html
+++ b/snapchap/www/app/components/confirmPassword/confirmPassword.html
@@ -8,9 +8,9 @@
       <div id="confirm-password-warning">
         Your email address is user to log in to <br>Snapchap<br> and for password recovery.
       </div>
-      <input id="confirm-password-input" type="text" name="password" placeholder="Confirm Password" ng-model="password" ng-keyup="stuff(password)"/>
+      <input id="confirm-password-input" type="password" name="password" placeholder="Confirm Password" ng-model="password" ng-keyup="stuff(password)"/>
 
-      <button id="continue-button" type="button" name="button" ng-show="continueButton" ng-click="confirmPassword(password)">Continue</button>
+      <button id="confirm-password-continue-button" type="button" name="button" ng-show="continueButton" ng-click="confirmPassword(password)">Continue</button>
 
     </ion-content>
 </ion-view>
