--- a/snapchap/www/app/components/email/email.html
+++ b/snapchap/www/app/components/email/email.html
@@ -10,7 +10,7 @@
       </div>
       <input id="email-input" type="text" name="email" placeholder="{{currentEmail}}" ng-model="email" ng-keyup="stuff(email)"/>
 
-      <button id="continue-button" type="button" name="button" ng-show="continueButton" ng-click="addEmail(email)">Continue</button>
+      <button id="email-continue-button" type="button" name="button" ng-show="continueButton" ng-click="addEmail(email)">Continue</button>
 
     </ion-content>
 </ion-view>
