bugs fixed including cached snaps in Edit Message view

--- a/snapchap/www/app/components/addFriends/addFriends.html
+++ b/snapchap/www/app/components/addFriends/addFriends.html
@@ -9,7 +9,7 @@
 
     <ul>
       <li>
-        <p id="add-by-username" class="add-friends-view__add-option">Add by Username<button ui-sref="addUsername" class="forward-btn">></button></p>
+        <p ui-sref="addUsername" id="add-by-username" class="add-friends-view__add-option">Add by Username<button class="forward-btn">></button></p>
       </li>
       <li>
         <p id="add-from-contacts" class="add-friends-view__add-option" style="color:gray">Add from Contacts</p>
