--- a/snapchap/www/app/components/editMessage/editMessage.html
+++ b/snapchap/www/app/components/editMessage/editMessage.html
@@ -52,7 +52,7 @@
 
     <!-- test buttons -->
     <div class="buttons">
-      <button type="button" ng-click="saveGeofilter()">Save Geofilter</button>
+      <!-- <button type="button" ng-click="saveGeofilter()">Save Geofilter</button> -->
       <!-- <button type="button" ng-click="saveCanvas()">Send</button> -->
       <!-- <button type="button" ng-click="clearDrawing()">Clear Drawing</button> -->
       <!-- <button type="button" ng-click="clearCanvas()">Clear Canvas</button> -->
