--- a/snapchap/www/app/components/myFriends/myFriends.css
+++ b/snapchap/www/app/components/myFriends/myFriends.css
@@ -1,6 +1,7 @@
 #my-friends-view nav {
   color: #9A3497;
-  font-size: 0.7rem;
+  font-size: 1.4rem;
+  /*font-size: 0.7rem;*/
   text-align: center;
   padding: 18px;
   margin-top: 10px;
