--- a/snapchap/www/app/components/settings/settings.html
+++ b/snapchap/www/app/components/settings/settings.html
@@ -1,8 +1,11 @@
 <ion-view title="Settings" id="settings-view">
     <ion-content>
       <nav>
-        <button ui-sref="profile" ng-click="showMenu()" id="settings-view__back-btn" class="back-btn"><</button>
-        <div class="nav-top-heading">Settings</div>
+        <div class="nav-top-heading">
+          Settings
+          <button ui-sref="profile" ng-click="showMenu()" id="settings-view__back-btn" class="back-btn"><</button>
+          
+        </div>
       </nav>
 
       <span class="heading">MY ACCOUNT</span>
