--- a/snapchap/www/main.css
+++ b/snapchap/www/main.css
@@ -77,6 +77,9 @@ ion-content {
   border-bottom: thin solid lightgray;
   font-size: 1.1rem;
 }
+.input, .input[type=password] {
+  padding-left: 9px;
+}
 .magnifying-glass {
   height: 17px;
   width: 17px;
