--- a/snapchap/www/app/components/profile/profile.css
+++ b/snapchap/www/app/components/profile/profile.css
@@ -14,7 +14,7 @@
   justify-content: flex-start;
   align-items: center;
   position: relative;
-  top: 77px;
+  top: 87px;
 }
 
 #snap-confetti {
@@ -25,12 +25,14 @@
 }
 
 #snap-confetti span {
-  background-image: url('../../../img/snap-confetti.png');
-  -webkit-background-size: 100%;
-          background-size: 100%;
-  height: 100%;
-  width: 100%;
+  background-image: url('../../../img/snapchap-doodle300.png');
+  -webkit-background-size: 50vw;
+          background-size: 50vw;
+  background-repeat: no-repeat;;
+  height: 60vw;
+  width: 50vw;
   position: absolute;
+  top: -20px;
 }
 
 #profile-view__share-btn {
