fixed filters not saving by using timeout

--- a/snapchap/www/app/components/editMessage/editMessage.html
+++ b/snapchap/www/app/components/editMessage/editMessage.html
@@ -9,7 +9,7 @@
 
         <div id="edit-message-view__edit-btns">
           <button id="edit-message-view__rewind-btn" class="icon-btn" ng-click="clearCanvas()"></button>
-          <button id="edit-message-view__undo-btn" class="icon-btn" ng-click="clearDrawing()"></button>
+          <!-- <button id="edit-message-view__undo-btn" class="icon-btn" ng-click="clearDrawing()"></button> -->
           <div id="edit-message-view__save-drawing" class="icon-btn" ng-click="saveDrawing()"></div>
           <div id="edit-message-view__pen-size-btn" class="icon-btn" ng-click="togglePenSize()"></div>
           <button id="edit-message-view__pen-btn" class="icon-btn" ng-click="toggleColorPicker()"></button>
