--- a/snapchap/www/app/components/password/password.css
+++ b/snapchap/www/app/components/password/password.css
@@ -49,17 +49,34 @@
   padding-left: 15px;
   display: flex;
   align-items: center;
+
+}
+
+#password-view ion-content {
+  display: flex;
+  justify-content: center;
 }
 
 #password-button {
-  position: relative;
-  left: 31%;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 100vw;
   margin-top: 20px;
-  color: blue;
+  color: RGBA(60, 178, 226, 1.00);
+  border: none;
   outline: none;
+  outline: none;
+  background-color: RGBA(60, 178, 226, 0);
 }
 
 #continue-button {
-  position: relative;
-    left: -29%;
+  position: absolute;
+  left: 0%;
+  bottom: 40%;
+  width: 100vw;
+  height: 50px;
+  color: white;
+  background-color: #00A686;
+  border: none;
 }
