--- a/snapchap/www/app/components/password/password.html
+++ b/snapchap/www/app/components/password/password.html
@@ -9,7 +9,9 @@
         To set a new password, please enter your <br> current password first.
       </div>
       <input id="password-input" type="password" name="name" value="" placeholder="Password" ng-model="password" ng-keyup="showContinueButton(password)"/>
-      <button id="password-button" type="button" name="button">Forgot you password?</button>
-      <button id="continue-button" type="button" name="button" ng-show="continueButton" ng-click="verifyPassword(password)">Continue</button>
+      <button id="password-button" type="button" name="button">Forgot your password?</button>
     </ion-content>
+
+    <button id="continue-button" type="button" name="button" ng-show="continueButton" ng-click="verifyPassword(password)">CONTINUE</button>
+
 </ion-view>
